--- a/electric-android/app/src/main/res/values/strings.xml
+++ b/electric-android/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">Electric Fields</string>
     <string name="app_folder_pictures" translatable="false">Electric Fields</string>
 
-    <!-- Toasts. -->
+    <!-- Notifications. -->
+    <string name="notification_title" translatable="false">@string/app_name</string>
     <string name="finished">Finished rendering.</string>
     <string name="saved">Saved to %s.</string>
     <string name="save_failed">Save failed.</string>
