show/hide action bar.

--- a/electric-android/app/src/main/res/values/strings.xml
+++ b/electric-android/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="save_failed">Save failed.</string>
 
     <!-- Menu -->
+    <string name="menu_preview">Fullscreen</string>
     <string name="menu_random">Randomise</string>
     <string name="menu_save_file">Save to file</string>
 </resources>
