--- a/electric-android/app/src/main/res/values/strings.xml
+++ b/electric-android/app/src/main/res/values/strings.xml
@@ -3,13 +3,15 @@
     <string name="app_folder_pictures" translatable="false">Electric Fields</string>
 
     <!-- Notifications. -->
-    <string name="notification_title" translatable="false">@string/app_name</string>
     <string name="finished">Finished rendering.</string>
-    <string name="saved">Image saved.</string>
+
+    <!-- Saved. -->
+    <string name="menu_save_file">Save to file</string>
+    <string name="saved_title">Electric fields saved</string>
+    <string name="saved_text">Touch to view your fields.</string>
     <string name="save_failed">Saving image failed.</string>
 
     <!-- Menu -->
     <string name="menu_preview">Fullscreen</string>
     <string name="menu_random">Randomise</string>
-    <string name="menu_save_file">Save to file</string>
 </resources>
