--- a/electric-android/app/src/main/res/values/strings.xml
+++ b/electric-android/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <!-- Menu -->
     <string name="menu_preview">Fullscreen</string>
     <string name="menu_random">Randomise</string>
+    <string name="menu_cancel">@android:string/cancel</string>
 </resources>
