--- a/electric-android/app/src/main/res/values/strings.xml
+++ b/electric-android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Electric Fields</string>
     <string name="app_folder_pictures" translatable="false">Electric Fields</string>
@@ -9,13 +10,15 @@
     <string name="menu_save_file">Save to file</string>
     <string name="saving_title" translatable="false">@string/app_name</string>
     <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved</string>
+    <string name="saved_title">Electric fields saved.</string>
     <string name="saved_text">Touch to view your fields.</string>
     <string name="save_failed">Saving image failed.</string>
 
-    <!-- Menu -->
+    <!-- Menu. -->
     <string name="menu_fullscreen">Fullscreen</string>
     <string name="menu_random">Randomise</string>
     <string name="menu_stop">@android:string/cancel</string>
+
+    <!-- Live wallpaper. -->
     <string name="wallpaper_description" translatable="false">@string/app_name</string>
 </resources>
