--- a/electric-android/app/src/main/res/values-fa/strings.xml
+++ b/electric-android/app/src/main/res/values-fa/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Electric Fields</string>
+    <string name="app_name">میدان های الکتریکی</string>
 
     <!-- Notifications. -->
-    <string name="finished">Finished rendering.</string>
+    <string name="finished">نقاشی به پایان رسید است.</string>
 
     <!-- Saved. -->
-    <string name="menu_save_file">Save to file</string>
-    <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved.</string>
-    <string name="saved_text">Touch to view your fields.</string>
-    <string name="save_failed">Saving image failed.</string>
+    <string name="menu_save_file">ذخیره در فایل</string>
+    <string name="saving_text">صرفه جویی در تصویر به فایل…</string>
+    <string name="saved_title">میدان های الکتریکی را نجات داد.</string>
+    <string name="saved_text">به مشاهده زمینه های خود را لمس کنید.</string>
+    <string name="save_failed">برای ذخیره کردن تصویر شکست خورده است.</string>
 
     <!-- Menu. -->
-    <string name="menu_fullscreen">Fullscreen</string>
-    <string name="menu_random">Randomise</string>
+    <string name="menu_fullscreen">تمام صفحه</string>
+    <string name="menu_random">تصادفی کردن</string>
 </resources>
