--- a/electric-android/app/src/main/res/values-nl/strings.xml
+++ b/electric-android/app/src/main/res/values-nl/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Electric Fields</string>
+    <string name="app_name">Elektrische Velden</string>
 
     <!-- Notifications. -->
-    <string name="finished">Finished rendering.</string>
+    <string name="finished">Tekening is voltooid.</string>
 
     <!-- Saved. -->
-    <string name="menu_save_file">Save to file</string>
-    <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved.</string>
-    <string name="saved_text">Touch to view your fields.</string>
-    <string name="save_failed">Saving image failed.</string>
+    <string name="menu_save_file">Opslaan naar bestand</string>
+    <string name="saving_text">Afbeeldingen opslaan naar bestand…</string>
+    <string name="saved_title">Elektrische velden worden opgeslagen.</string>
+    <string name="saved_text">Raak aan om uw velden te bekijken.</string>
+    <string name="save_failed">Mislukt afbeelding op te slaan.</string>
 
     <!-- Menu. -->
-    <string name="menu_fullscreen">Fullscreen</string>
-    <string name="menu_random">Randomise</string>
+    <string name="menu_fullscreen">Schermvullend</string>
+    <string name="menu_random">Willekeurig</string>
 </resources>
