--- a/electric-android/app/src/main/res/values-zh-rTW/strings.xml
+++ b/electric-android/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Electric Fields</string>
+    <string name="app_name">電場</string>
 
     <!-- Notifications. -->
-    <string name="finished">Finished rendering.</string>
+    <string name="finished">繪畫完成。</string>
 
     <!-- Saved. -->
-    <string name="menu_save_file">Save to file</string>
-    <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved.</string>
-    <string name="saved_text">Touch to view your fields.</string>
-    <string name="save_failed">Saving image failed.</string>
+    <string name="menu_save_file">保存到文件</string>
+    <string name="saving_text">正在將圖片保存到文件…</string>
+    <string name="saved_title">電場得以節省。</string>
+    <string name="saved_text">觸摸可查看字段。</string>
+    <string name="save_failed">無法保存圖片。</string>
 
     <!-- Menu. -->
-    <string name="menu_fullscreen">Fullscreen</string>
-    <string name="menu_random">Randomise</string>
+    <string name="menu_fullscreen">全屏</string>
+    <string name="menu_random">隨機化</string>
 </resources>
