--- a/electric-android/app/src/main/res/values-de/strings.xml
+++ b/electric-android/app/src/main/res/values-de/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Electric Fields</string>
+    <string name="app_name">Elektrische Felder</string>
 
     <!-- Notifications. -->
-    <string name="finished">Finished rendering.</string>
+    <string name="finished">Zeichnung ist fertig.</string>
 
     <!-- Saved. -->
-    <string name="menu_save_file">Save to file</string>
-    <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved.</string>
-    <string name="saved_text">Touch to view your fields.</string>
-    <string name="save_failed">Saving image failed.</string>
+    <string name="menu_save_file">In Datei speichern</string>
+    <string name="saving_text">Bild wird gespeichert…</string>
+    <string name="saved_title">Elektrische Felder werden gespeichert.</string>
+    <string name="saved_text">Berühren Sie, um Ihre Felder anzuzeigen.</string>
+    <string name="save_failed">Fehler beim Speichern des Bildes.</string>
 
     <!-- Menu. -->
-    <string name="menu_fullscreen">Fullscreen</string>
-    <string name="menu_random">Randomise</string>
+    <string name="menu_fullscreen">Vollbild</string>
+    <string name="menu_random">Randomisieren</string>
 </resources>
