--- a/electric-android/app/src/main/res/values-el/strings.xml
+++ b/electric-android/app/src/main/res/values-el/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Electric Fields</string>
+    <string name="app_name">Ηλεκτρικά Πεδία</string>
 
     <!-- Notifications. -->
-    <string name="finished">Finished rendering.</string>
+    <string name="finished">Αντλώντας έχει τελειώσει.</string>
 
     <!-- Saved. -->
-    <string name="menu_save_file">Save to file</string>
-    <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved.</string>
-    <string name="saved_text">Touch to view your fields.</string>
-    <string name="save_failed">Saving image failed.</string>
+    <string name="menu_save_file">Αποθήκευση σε αρχείο</string>
+    <string name="saving_text">Αποθήκευση εικόνας σε αρχείο…</string>
+    <string name="saved_title">Τα ηλεκτρικά πεδία σώζονται.</string>
+    <string name="saved_text">Αγγίξτε για να δείτε τα πεδία σας.</string>
+    <string name="save_failed">Αποτυχία για να αποθηκεύσετε την εικόνα.</string>
 
     <!-- Menu. -->
-    <string name="menu_fullscreen">Fullscreen</string>
-    <string name="menu_random">Randomise</string>
+    <string name="menu_fullscreen">Πληρησ οθονη</string>
+    <string name="menu_random">Τυχαιοποιήσουν</string>
 </resources>
