--- a/electric-android/app/src/main/res/values-fi/strings.xml
+++ b/electric-android/app/src/main/res/values-fi/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Electric Fields</string>
+    <string name="app_name">Sähkökentät</string>
 
     <!-- Notifications. -->
-    <string name="finished">Finished rendering.</string>
+    <string name="finished">Piirustus on päättynyt.</string>
 
     <!-- Saved. -->
-    <string name="menu_save_file">Save to file</string>
-    <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved.</string>
-    <string name="saved_text">Touch to view your fields.</string>
-    <string name="save_failed">Saving image failed.</string>
+    <string name="menu_save_file">Tallenna tiedosto</string>
+    <string name="saving_text">Tallentaminen kuvan tiedostoon…</string>
+    <string name="saved_title">Sähkökentät tallennetaan.</string>
+    <string name="saved_text">Koskettamalla tarkastella kenttiä.</string>
+    <string name="save_failed">Tallennus epäonnistui kuvan.</string>
 
     <!-- Menu. -->
-    <string name="menu_fullscreen">Fullscreen</string>
-    <string name="menu_random">Randomise</string>
+    <string name="menu_fullscreen">Koko näyttö</string>
+    <string name="menu_random">Satunnaistetusti</string>
 </resources>
