--- a/electric-android/app/src/main/res/values-fr/strings.xml
+++ b/electric-android/app/src/main/res/values-fr/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Electric Fields</string>
+    <string name="app_name">Champs Électriques</string>
 
     <!-- Notifications. -->
-    <string name="finished">Finished rendering.</string>
+    <string name="finished">Le dessin est terminé.</string>
 
     <!-- Saved. -->
-    <string name="menu_save_file">Save to file</string>
-    <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved.</string>
-    <string name="saved_text">Touch to view your fields.</string>
-    <string name="save_failed">Saving image failed.</string>
+    <string name="menu_save_file">Enregistrer dans le fichier</string>
+    <string name="saving_text">Enregistrement d\'une image dans un fichier…</string>
+    <string name="saved_title">Les champs électriques sont enregistrés.</string>
+    <string name="saved_text">Touchez pour afficher vos champs.</string>
+    <string name="save_failed">Impossible d\'enregistrer l\'image.</string>
 
     <!-- Menu. -->
-    <string name="menu_fullscreen">Fullscreen</string>
-    <string name="menu_random">Randomise</string>
+    <string name="menu_fullscreen">Plein écran</string>
+    <string name="menu_random">Randomiser</string>
 </resources>
