--- a/electric-android/app/src/main/res/values-lt/strings.xml
+++ b/electric-android/app/src/main/res/values-lt/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Electric Fields</string>
+    <string name="app_name">Elektriniai Laukai</string>
 
     <!-- Notifications. -->
-    <string name="finished">Finished rendering.</string>
+    <string name="finished">Piešimo yra baigtas.</string>
 
     <!-- Saved. -->
-    <string name="menu_save_file">Save to file</string>
-    <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved.</string>
-    <string name="saved_text">Touch to view your fields.</string>
-    <string name="save_failed">Saving image failed.</string>
+    <string name="menu_save_file">Išsaugoti į failą</string>
+    <string name="saving_text">Taupymo vaizdą į failą…</string>
+    <string name="saved_title">Elektriniai laukai yra išsaugotas.</string>
+    <string name="saved_text">Palieskite, kad galėtumėte peržiūrėti savo laukus.</string>
+    <string name="save_failed">Nepavyko išsaugoti atvaizdą.</string>
 
     <!-- Menu. -->
-    <string name="menu_fullscreen">Fullscreen</string>
-    <string name="menu_random">Randomise</string>
+    <string name="menu_fullscreen">Per visą ekraną</string>
+    <string name="menu_random">Atsitiktinė</string>
 </resources>
