--- a/electric-android/app/src/main/res/values-ru/strings.xml
+++ b/electric-android/app/src/main/res/values-ru/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Electric Fields</string>
+    <string name="app_name">Электрические Поля</string>
 
     <!-- Notifications. -->
-    <string name="finished">Finished rendering.</string>
+    <string name="finished">Рисование закончена.</string>
 
     <!-- Saved. -->
-    <string name="menu_save_file">Save to file</string>
-    <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved.</string>
-    <string name="saved_text">Touch to view your fields.</string>
-    <string name="save_failed">Saving image failed.</string>
+    <string name="menu_save_file">Сохранить в файл</string>
+    <string name="saving_text">Сохранение изображения в файл…</string>
+    <string name="saved_title">Электрические поля сохраняются.</string>
+    <string name="saved_text">Нажмите для просмотра полей.</string>
+    <string name="save_failed">Не удалось сохранить изображение.</string>
 
     <!-- Menu. -->
-    <string name="menu_fullscreen">Fullscreen</string>
-    <string name="menu_random">Randomise</string>
+    <string name="menu_fullscreen">Полноэкранный</string>
+    <string name="menu_random">Перемешайте</string>
 </resources>
