--- a/electric-android/app/src/main/res/values-uk/strings.xml
+++ b/electric-android/app/src/main/res/values-uk/strings.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Electric Fields</string>
+    <string name="app_name">Електричні Поля</string>
 
     <!-- Notifications. -->
-    <string name="finished">Finished rendering.</string>
+    <string name="finished">Картина закінчена.</string>
 
     <!-- Saved. -->
-    <string name="menu_save_file">Save to file</string>
-    <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved.</string>
-    <string name="saved_text">Touch to view your fields.</string>
-    <string name="save_failed">Saving image failed.</string>
+    <string name="menu_save_file">Зберегти в файл</string>
+    <string name="saving_text">Збереження зображення в файл…</string>
+    <string name="saved_title">Електричні поля зберігаються.</string>
+    <string name="saved_text">Натисніть для перегляду полів.</string>
+    <string name="save_failed">Неможливо зберегти зображення.</string>
 
     <!-- Menu. -->
-    <string name="menu_fullscreen">Fullscreen</string>
-    <string name="menu_random">Randomise</string>
+    <string name="menu_fullscreen">Повноекранний</string>
+    <string name="menu_random">Перемішати</string>
 </resources>
