--- a/electric-android/app/src/main/res/values/strings.xml
+++ b/electric-android/app/src/main/res/values/strings.xml
@@ -4,13 +4,13 @@
     <string name="app_folder_pictures" translatable="false">Electric Fields</string>
 
     <!-- Notifications. -->
-    <string name="finished">Finished rendering.</string>
+    <string name="finished">Rendering is finished.</string>
 
     <!-- Saved. -->
     <string name="menu_save_file">Save to file</string>
     <string name="saving_title" translatable="false">@string/app_name</string>
     <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields saved.</string>
+    <string name="saved_title">Electric fields are saved.</string>
     <string name="saved_text">Touch to view your fields.</string>
     <string name="save_failed">Saving image failed.</string>
 
