--- a/electric-android/app/src/main/res/values-bg/strings.xml
+++ b/electric-android/app/src/main/res/values-bg/strings.xml
@@ -15,4 +15,9 @@
     <!-- Menu. -->
     <string name="menu_fullscreen">Цял екран</string>
     <string name="menu_random">Случаен</string>
+
+    <!-- Palette -->
+    <string name="palette_title">Палитра</string>
+    <string name="palette_density">плътност</string>
+    <string name="palette_hues">нюанси</string>
 </resources>
