--- a/electric-android/app/src/main/res/values-et/strings.xml
+++ b/electric-android/app/src/main/res/values-et/strings.xml
@@ -15,4 +15,9 @@
     <!-- Menu. -->
     <string name="menu_fullscreen">Täisekraan</string>
     <string name="menu_random">Juhuslikumaks</string>
+
+    <!-- Palette -->
+    <string name="palette_title">Palett</string>
+    <string name="palette_density">Tihedus</string>
+    <string name="palette_hues">Toonid</string>
 </resources>
