--- a/electric-android/app/src/main/res/values-fr/strings.xml
+++ b/electric-android/app/src/main/res/values-fr/strings.xml
@@ -15,4 +15,9 @@
     <!-- Menu. -->
     <string name="menu_fullscreen">Plein écran</string>
     <string name="menu_random">Randomiser</string>
+
+    <!-- Palette -->
+    <string name="palette_title">Palette</string>
+    <string name="palette_density">Densité</string>
+    <string name="palette_hues">Teintes</string>
 </resources>
