--- a/electric-android/app/src/main/res/values-fa/strings.xml
+++ b/electric-android/app/src/main/res/values-fa/strings.xml
@@ -15,4 +15,9 @@
     <!-- Menu. -->
     <string name="menu_fullscreen">تمام صفحه</string>
     <string name="menu_random">تصادفی کردن</string>
+
+    <!-- Palette -->
+    <string name="palette_title">جعبه رنگ نقاشی</string>
+    <string name="palette_density">تراکم</string>
+    <string name="palette_hues">رنگ ها</string>
 </resources>
