--- a/electric-android/app/src/main/res/values-fi/strings.xml
+++ b/electric-android/app/src/main/res/values-fi/strings.xml
@@ -15,4 +15,9 @@
     <!-- Menu. -->
     <string name="menu_fullscreen">Koko näyttö</string>
     <string name="menu_random">Satunnaistetusti</string>
+
+    <!-- Palette -->
+    <string name="palette_title">Paletti</string>
+    <string name="palette_density">Tiheys</string>
+    <string name="palette_hues">Sävyjä</string>
 </resources>
