--- a/electric-android/app/src/main/res/values-it/strings.xml
+++ b/electric-android/app/src/main/res/values-it/strings.xml
@@ -15,4 +15,9 @@
     <!-- Menu. -->
     <string name="menu_fullscreen">A schermo intero</string>
     <string name="menu_random">Randomizza</string>
+
+    <!-- Palette -->
+    <string name="palette_title">Tavolozza</string>
+    <string name="palette_density">Densità</string>
+    <string name="palette_hues">Hues</string>
 </resources>
