--- a/electric-android/app/src/main/res/values-ja/strings.xml
+++ b/electric-android/app/src/main/res/values-ja/strings.xml
@@ -15,4 +15,9 @@
     <!-- Menu. -->
     <string name="menu_fullscreen">全画面表示</string>
     <string name="menu_random">ランダム化</string>
+
+    <!-- Palette -->
+    <string name="palette_title">パレット</string>
+    <string name="palette_density">密度</string>
+    <string name="palette_hues">色合い</string>
 </resources>
