--- a/electric-android/app/src/main/res/values-nl/strings.xml
+++ b/electric-android/app/src/main/res/values-nl/strings.xml
@@ -15,4 +15,9 @@
     <!-- Menu. -->
     <string name="menu_fullscreen">Schermvullend</string>
     <string name="menu_random">Willekeurig</string>
+
+    <!-- Palette -->
+    <string name="palette_title">Palet</string>
+    <string name="palette_density">Dichtheid</string>
+    <string name="palette_hues">Hues</string>
 </resources>
