--- a/electric-android/app/src/main/res/values-sv/strings.xml
+++ b/electric-android/app/src/main/res/values-sv/strings.xml
@@ -15,4 +15,9 @@
     <!-- Menu. -->
     <string name="menu_fullscreen">Fullskärm</string>
     <string name="menu_random">Slumpa</string>
+
+    <!-- Palette -->
+    <string name="palette_title">Palett</string>
+    <string name="palette_density">Densitet</string>
+    <string name="palette_hues">Hues</string>
 </resources>
