--- a/electric-android/app/src/main/res/values-uk/strings.xml
+++ b/electric-android/app/src/main/res/values-uk/strings.xml
@@ -15,4 +15,9 @@
     <!-- Menu. -->
     <string name="menu_fullscreen">Повноекранний</string>
     <string name="menu_random">Перемішати</string>
+
+    <!-- Palette -->
+    <string name="palette_title">Палітра</string>
+    <string name="palette_density">Щільність</string>
+    <string name="palette_hues">Відтінки</string>
 </resources>
