--- a/electric-android/app/src/main/res/values-zh-rTW/strings.xml
+++ b/electric-android/app/src/main/res/values-zh-rTW/strings.xml
@@ -15,4 +15,9 @@
     <!-- Menu. -->
     <string name="menu_fullscreen">全屏</string>
     <string name="menu_random">隨機化</string>
+
+    <!-- Palette -->
+    <string name="palette_title">調色板</string>
+    <string name="palette_density">密度</string>
+    <string name="palette_hues">色調</string>
 </resources>
