--- a/electric-android/app/src/main/res/values/strings.xml
+++ b/electric-android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Electric Fields</string>
-    <string name="app_folder_pictures" translatable="false">Electric Fields</string>
+    <string name="app_folder_pictures" translatable="false">@string/app_name</string>
 
     <!-- Notifications. -->
     <string name="finished">Rendering is finished.</string>
