--- a/electric-android/app/src/main/res/values-bg/strings.xml
+++ b/electric-android/app/src/main/res/values-bg/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Визуализация е завършен.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Запазване на файл</string>
-    <string name="saving_text">Запазване на изображението във файл…</string>
-    <string name="saved_title">Електрически полета са запазени.</string>
-    <string name="saved_text">Докоснете, за да видите полета си.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Споделяне на снимки чрез"</string>
     <string name="save_failed">Неуспешно запазване на изображението.</string>
 
     <!-- Menu. -->
