--- a/electric-android/app/src/main/res/values-cs/strings.xml
+++ b/electric-android/app/src/main/res/values-cs/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Renderování je dokončen.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Uložit do souboru</string>
-    <string name="saving_text">Uložení obrazu do souboru…</string>
-    <string name="saved_title">Elektrická pole jsou uloženy.</string>
-    <string name="saved_text">Dotykem zobrazit pole.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Sdílet fotografii pomocí"</string>
     <string name="save_failed">Nepodařilo se uložit obrázek.</string>
 
     <!-- Menu. -->
