--- a/electric-android/app/src/main/res/values-da/strings.xml
+++ b/electric-android/app/src/main/res/values-da/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Tegning er færdig.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Gem til fil</string>
-    <string name="saving_text">Gemme billede til fil…</string>
-    <string name="saved_title">Elektriske felter gemmes.</string>
-    <string name="saved_text">Tryk for at se dine felter.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Del billede via"</string>
     <string name="save_failed">Kunne ikke gemme billede.</string>
 
     <!-- Menu. -->
