--- a/electric-android/app/src/main/res/values-et/strings.xml
+++ b/electric-android/app/src/main/res/values-et/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Joonistus on lõppenud.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Salvesta faili</string>
-    <string name="saving_text">Pildi salvestamine faili…</string>
-    <string name="saved_title">Elektriväljade salvestatakse.</string>
-    <string name="saved_text">Puudutage, et vaadata oma valdkonnas.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Pildi jagamine:"</string>
     <string name="save_failed">Õnnestunud salvestada pilti.</string>
 
     <!-- Menu. -->
