--- a/electric-android/app/src/main/res/values-fi/strings.xml
+++ b/electric-android/app/src/main/res/values-fi/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Piirustus on päättynyt.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Tallenna tiedosto</string>
-    <string name="saving_text">Tallentaminen kuvan tiedostoon…</string>
-    <string name="saved_title">Sähkökentät tallennetaan.</string>
-    <string name="saved_text">Koskettamalla tarkastella kenttiä.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Jaa kuva"</string>
     <string name="save_failed">Tallennus epäonnistui kuvan.</string>
 
     <!-- Menu. -->
