--- a/electric-android/app/src/main/res/values-fr/strings.xml
+++ b/electric-android/app/src/main/res/values-fr/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Le dessin est terminé.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Enregistrer dans le fichier</string>
-    <string name="saving_text">Enregistrement d\'une image dans un fichier…</string>
-    <string name="saved_title">Les champs électriques sont enregistrés.</string>
-    <string name="saved_text">Touchez pour afficher vos champs.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Partager l\'image via"</string>
     <string name="save_failed">Impossible d\'enregistrer l\'image.</string>
 
     <!-- Menu. -->
