--- a/electric-android/app/src/main/res/values-hu/strings.xml
+++ b/electric-android/app/src/main/res/values-hu/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Rajz befejeződött.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Fájlba menteni</string>
-    <string name="saving_text">Kép mentése fájlba…</string>
-    <string name="saved_title">Elektromos mezők kerülnek.</string>
-    <string name="saved_text">Érintse meg az a mezőket.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Kép megosztása a következőn keresztül:"</string>
     <string name="save_failed">Nem sikerült menteni a képet.</string>
 
     <!-- Menu. -->
