--- a/electric-android/app/src/main/res/values-it/strings.xml
+++ b/electric-android/app/src/main/res/values-it/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Disegno è finito.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Salva su file</string>
-    <string name="saving_text">Salvataggio di immagini in un file…</string>
-    <string name="saved_title">I campi elettrici vengono salvati.</string>
-    <string name="saved_text">Toccare per visualizzare i campi.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Condividi foto via"</string>
     <string name="save_failed">Impossibile salvare l\'immagine.</string>
 
     <!-- Menu. -->
