--- a/electric-android/app/src/main/res/values-iw/strings.xml
+++ b/electric-android/app/src/main/res/values-iw/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">העיבוד סיים.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">שמור לקובץ</string>
-    <string name="saving_text">שמירת תמונה לקובץ…</string>
-    <string name="saved_title">שדות חשמליים נשמרות.</string>
-    <string name="saved_text">גע כדי להציג שדות שלך.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"שתף תמונה באמצעות"</string>
     <string name="save_failed">שמירת תמונה נכשלה.</string>
 
     <!-- Menu. -->
