--- a/electric-android/app/src/main/res/values-ja/strings.xml
+++ b/electric-android/app/src/main/res/values-ja/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">図面は完成しました。</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">ファイルに保存</string>
-    <string name="saving_text">画像をファイルに保存中…</string>
-    <string name="saved_title">電場が保存されます。</string>
-    <string name="saved_text">タッチしてフィールドを表示します。</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"画像を共有:"</string>
     <string name="save_failed">画像を保存できませんでした。</string>
 
     <!-- Menu. -->
