--- a/electric-android/app/src/main/res/values-lt/strings.xml
+++ b/electric-android/app/src/main/res/values-lt/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Piešimo yra baigtas.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Išsaugoti į failą</string>
-    <string name="saving_text">Taupymo vaizdą į failą…</string>
-    <string name="saved_title">Elektriniai laukai yra išsaugotas.</string>
-    <string name="saved_text">Palieskite, kad galėtumėte peržiūrėti savo laukus.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Bendrinti paveikslėlį naudojant"</string>
     <string name="save_failed">Nepavyko išsaugoti atvaizdą.</string>
 
     <!-- Menu. -->
