--- a/electric-android/app/src/main/res/values-nb/strings.xml
+++ b/electric-android/app/src/main/res/values-nb/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Tegningen er ferdig.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Lagre til fil</string>
-    <string name="saving_text">Lagrer bildet til fil…</string>
-    <string name="saved_title">Elektriske felt er lagret.</string>
-    <string name="saved_text">Trykk for å vise feltene.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Del bilde via"</string>
     <string name="save_failed">Kunne ikke lagre bildet.</string>
 
     <!-- Menu. -->
