--- a/electric-android/app/src/main/res/values-nl/strings.xml
+++ b/electric-android/app/src/main/res/values-nl/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Tekening is voltooid.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Opslaan naar bestand</string>
-    <string name="saving_text">Afbeeldingen opslaan naar bestand…</string>
-    <string name="saved_title">Elektrische velden worden opgeslagen.</string>
-    <string name="saved_text">Raak aan om uw velden te bekijken.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Foto delen via"</string>
     <string name="save_failed">Mislukt afbeelding op te slaan.</string>
 
     <!-- Menu. -->
