--- a/electric-android/app/src/main/res/values-pl/strings.xml
+++ b/electric-android/app/src/main/res/values-pl/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Rysunek jest zakończona.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Zapisz do pliku</string>
-    <string name="saving_text">Zapisywanie obrazu do pliku…</string>
-    <string name="saved_title">Pola elektryczne są zapisywane.</string>
-    <string name="saved_text">Dotknij, aby wyświetlić pol</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Prześlij zdjęcie przez:"</string>
     <string name="save_failed">Nie udało się zapisać obraz.</string>
 
     <!-- Menu. -->
