--- a/electric-android/app/src/main/res/values-pt/strings.xml
+++ b/electric-android/app/src/main/res/values-pt/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">O desenho está concluído.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Salvar em arquivo</string>
-    <string name="saving_text">Salvando imagem para arquivo…</string>
-    <string name="saved_title">Os campos elétricos são salvos.</string>
-    <string name="saved_text">Toque para visualizar os campos.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Compartilhar imagem via"</string>
     <string name="save_failed">Falha ao salvar a imagem.</string>
 
     <!-- Menu. -->
