--- a/electric-android/app/src/main/res/values-ro/strings.xml
+++ b/electric-android/app/src/main/res/values-ro/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Desenul este terminat.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Salvați în fișier</string>
-    <string name="saving_text">Se salvează imaginea în fișier…</string>
-    <string name="saved_title">Câmpuri electrice sunt salvate.</string>
-    <string name="saved_text">Atingeți pentru a vizualiza câmpurile.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Distribuiți fotografia prin"</string>
     <string name="save_failed">Pentru a salva imaginea a eșuat.</string>
 
     <!-- Menu. -->
