--- a/electric-android/app/src/main/res/values-ru/strings.xml
+++ b/electric-android/app/src/main/res/values-ru/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Рисование закончена.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Сохранить в файл</string>
-    <string name="saving_text">Сохранение изображения в файл…</string>
-    <string name="saved_title">Электрические поля сохраняются.</string>
-    <string name="saved_text">Нажмите для просмотра полей.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Отправить картинку через"</string>
     <string name="save_failed">Не удалось сохранить изображение.</string>
 
     <!-- Menu. -->
