--- a/electric-android/app/src/main/res/values-uk/strings.xml
+++ b/electric-android/app/src/main/res/values-uk/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">Картина закінчена.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Зберегти в файл</string>
-    <string name="saving_text">Збереження зображення в файл…</string>
-    <string name="saved_title">Електричні поля зберігаються.</string>
-    <string name="saved_text">Натисніть для перегляду полів.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Надісл. фото через"</string>
     <string name="save_failed">Неможливо зберегти зображення.</string>
 
     <!-- Menu. -->
