--- a/electric-android/app/src/main/res/values-zh-rTW/strings.xml
+++ b/electric-android/app/src/main/res/values-zh-rTW/strings.xml
@@ -5,11 +5,8 @@
     <!-- Notifications. -->
     <string name="finished">繪畫完成。</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">保存到文件</string>
-    <string name="saving_text">正在將圖片保存到文件…</string>
-    <string name="saved_title">電場得以節省。</string>
-    <string name="saved_text">觸摸可查看字段。</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"透過…分享圖片"</string>
     <string name="save_failed">無法保存圖片。</string>
 
     <!-- Menu. -->
