--- a/electric-android/app/src/main/res/values/strings.xml
+++ b/electric-android/app/src/main/res/values/strings.xml
@@ -6,12 +6,10 @@
     <!-- Notifications. -->
     <string name="finished">Rendering is finished.</string>
 
-    <!-- Saved. -->
-    <string name="menu_save_file">Save to file</string>
-    <string name="saving_title" translatable="false">@string/app_name</string>
-    <string name="saving_text">Saving image to file…</string>
-    <string name="saved_title">Electric fields are saved.</string>
-    <string name="saved_text">Touch to view your fields.</string>
+    <!-- Share. -->
+    <string name="sendImage" msgid="7279510542799399570">"Share picture via"</string>
+    <string name="menu_share" translatable="false">@string/sendImage</string>
+    <string name="share_title" translatable="false">@string/app_name</string>
     <string name="save_failed">Saving image failed.</string>
 
     <!-- Menu. -->
